<resources>
    <string name="google_app_id">34770190059</string>
    <string name="app_name">Crimapp</string>
    <string name="call911text">Call 911</string>
    <string name="abouttext">About</string>
    <string name="search_by_location_text">Type Location Here</string>
    <string name="getlocationboxstring">Search by Current Location</string>
    <string name="backbuttontext">Back</string>
    <string name="lengend">Legend</string>
    <string name="howtousetext">How to Use</string>
    <string name="aboutustext">Developed by Cyriac, Jody, and Daniel.</string>
    <string name="title_activity_crime_map">Crime Map</string>
    <string name="search_button_string">Search</string>
    <string name="search_directions_text">Destination (if any)</string>
    <string name="search_directions_buttons">Get Directions</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="theme_shared_pref">com.somethingweird.crimeapp.themepref</string>
    <string name="div_desc">DIVIDER</string>
    <string name="change_theme_setting_text">Change Theme</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="howtousetitle">How to Use</string>
    <string name="htu1">Type in a location you want to focus on and click the search button next to it to search around the specified location.</string>
    <string name="htu2">Click on the search by current location to search around the phone\'s your last known location, based on your phone\'s location provider</string>
    <string name="htu3">Select a time and click search to find crimes around the specified time, the search is automatically focused on your last known location, if known, or Columbus as a wole, if your location is unavailable.</string>
    <string name="htu4">Type in a destination to get driving directions from the search location to the destination on the map along with the crimes and heatmap.</string>
    <string name="select_time">Select Time:</string>

</resources>
