<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.somethingweird.crimapp.About">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/about_us_layout"
        android:layout_below="@+id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/aboutustext"
            android:id="@+id/about_us"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/about_us_layout_div"
        android:src="@android:drawable/divider_horizontal_textfield"
        android:layout_width="fill_parent"
        android:layout_below="@+id/about_us_layout"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:contentDescription="@string/div_desc" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/how_to_use_layout"
        android:layout_below="@+id/about_us_layout_div"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/howtousetext"
            android:id="@+id/howtouse"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/how_to_use_layout_div"
        android:src="@android:drawable/divider_horizontal_textfield"
        android:layout_width="fill_parent"
        android:layout_below="@+id/how_to_use_layout"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:contentDescription="@string/div_desc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/theme_select_layout"
        android:layout_below="@+id/how_to_use_layout_div"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Switch"
            android:id="@+id/theme_switch"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/change_theme_setting_text"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>


</RelativeLayout>
