<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.somethingweird.crimapp.Landing">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/toolbar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/select_time"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:id="@+id/select_time_test" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hourpicker"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/minutepicker"
                    android:layout_marginEnd="25dp" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/minutepicker"
                    android:orientation="horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <Spinner
                    android:layout_height="70dp"
                    android:id="@+id/meridianpicker"
                    android:spinnerMode="dropdown"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/minutepicker" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <EditText
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/searchbylocationbox"
                    android:hint="@string/search_by_location_text"
                    android:inputType="text"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <EditText
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/destEditText"
                    android:hint="@string/search_directions_text"
                    android:inputType="text"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_button_string"
                    android:id="@+id/search_by_time_button"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/search_bar1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_button_string"
                            android:id="@+id/searchbylocbutton"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/search_bar2"
                    android:layout_below="@+id/search_bar1">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/getlocationboxstring"
                            android:id="@+id/getlocationbutton"
                            android:gravity="right"
                            android:layout_gravity="right"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/search_bar3"
                    android:layout_below="@+id/search_bar2">
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/search_bar4"
                    android:layout_below="@+id/search_bar3">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_directions_buttons"
                            android:id="@+id/getDirButton"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
