<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.somethingweird.crimapp.Landing">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/toolbar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/search_bar1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:layout_width="175dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/searchbylocationbox"
                            android:hint="@string/search_by_location_text"
                            android:inputType="text"
                            android:layout_centerVertical="true"
                            android:layout_alignParentStart="true" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_button_string"
                            android:id="@+id/searchbylocbutton"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/search_bar2"
                    android:layout_below="@+id/search_bar1">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/getlocationboxstring"
                            android:id="@+id/getlocationbutton"
                            android:gravity="right"
                            android:layout_gravity="right"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:id="@+id/search_bar3"
                    android:layout_below="@+id/search_bar2">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <NumberPicker
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/hourpicker"
                            android:orientation="horizontal"
                            android:layout_alignTop="@+id/minutepicker"
                            android:layout_alignParentStart="true" />

                        <NumberPicker
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/minutepicker"
                            android:orientation="horizontal"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/hourpicker"
                            android:layout_marginStart="20dp" />

                        <Spinner
                            android:layout_height="70dp"
                            android:id="@+id/meridianpicker"
                            android:spinnerMode="dropdown"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignBottom="@+id/search_by_time_button"
                            android:layout_toEndOf="@+id/minutepicker" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_button_string"
                            android:id="@+id/search_by_time_button"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/search_bar4"
                    android:layout_below="@+id/search_bar3">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:layout_width="175dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/destEditText"
                            android:hint="@string/search_directions_text"
                            android:inputType="text"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="31dp" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_directions_buttons"
                            android:id="@+id/getDirButton"
                            android:layout_alignTop="@+id/destEditText"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
